Max OS X: allow to configure the daemon max PermGen using standard preferences